# NsDownloader

./: .gitignore  .gitmodules  LICENSE  README.md  bash.sh  xmake.lua
NsVersion/: Makefile
NsVersion/libs/inih/: INIReader.cpp  ini.h
NsVersion/romfs/: user.ini
NsVersion/src/: Downloader.cpp  gui.cpp  main.cpp  window.cpp
NsVersion/src/tabs/: filebrowser.cpp  settings.cpp
PcVersion/: CMakeLists.txt
PcVersion/src/: main.cpp
doc/: baiduyun加速下载原理.md
include/: Downloader.hpp  TinyNetdisk.hpp  tabs.hpp  windows.hpp
src/: Downloader.cpp  main.cpp
tests/: TinyNetdisk.cpp
